pkg/workloads/jellyfin/overlays/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  namespace: jellyfin
  labels:
    app: jellyfin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      name: jellyfin
      namespace: jellyfin
      labels:
        app: jellyfin
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                - key: app
                  operator: In
                  values:
                    - compute
      containers:
      - name: jellyfin
        # args:
          # - --configdir
          # - /usr/local/etc/jellyfin
          # - --logdir
          # - /usr/local/lib/log/jellyfin
          # - --cachedir
          # - /usr/local/lib/cache/jellyfin
          # - --datadir
          # - /usr/local/lib/jellyfin
        volumeMounts:
        - name: cache
          mountPath: /config/cache
        - name: logs
          mountPath: /config/logs
        - name: transcodes
          mountPath: /config/data/transcodes
        - name: media
          mountPath: /media
        - name: config
          mountPath: /config
        - name: config-plugins
          mountPath: /config/data/plugins
        - name: data
          mountPath: /config/data
      volumes:
      - name: cache
        emptyDir:
          medium: Memory
          sizeLimit: 5Gi
      - name: logs
        emptyDir:
          medium: Memory
          sizeLimit: 500Mi
      - name: transcodes
        emptyDir:
          medium: Memory
          sizeLimit: 20Gi
      - name: media
        persistentVolumeClaim:
          claimName: media-pvc
      - name: config
        persistentVolumeClaim:
          claimName: config-pvc
      - name: data
        persistentVolumeClaim:
          claimName: data-pvc
