pkg/workloads/jellyfin/overlays/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: jellyfin
  labels:
    svccontroller.k3s.cattle.io/lbpool: pool0
