pkg/workloads/jellyfin/overlays/prod/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin-ir
  namespace: jellyfin
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`jellyfin.app.rick.expresso.lan`)
    kind: Rule
    middlewares:
    - name: mw-redirecthttps
    - name: mw-headers
    services:
    - name: web-client
      namespace: jellyfin
      kind: Service
      port: web
      passHostHeader: true
      responseForwarding:
        flushInterval: 1ms
    observability:
      accesslogs: true
      tracing: true
    NativeLB: true
  tls: {}
